[tool.poetry]
name = "reflection-agent"
version = "0.1.0"
description = ""
authors = ["Pablo Toledo <pablo.toledo@basf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
langchain = "^0.3.14"
langchain-openai = "^0.2.14"
langgraph = "^0.2.61"
grandalf = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
